# gatk-sv-aws

./: .gitignore  README.md  gse-cohort-runs-gatk-sv-validation-2026q2-rerun-2026-05-25-scramble.json  gse-cohort-runs-gatk-sv-validation-2026q2-rerun-2026-05-25.json  gse-cohort-runs.json  optimized-run-ids-v2.json  optimized-run-ids.json  train-gcnv-run.json  workflow-ids-optimized.json  workflow-versions.json
python/: pyproject.toml
python/src/gatk_sv_aws/: __init__.py  cli.py  models.py  submit.py
python/tests/: __init__.py  conftest.py  test_gbe_bug_condition.py  test_gbe_preservation.py
python/tests/acceptance/: __init__.py  conftest.py  test_engine_divergence.py  test_per_sample_cost.py  test_validation_concordance.py
python/tests/integration/: conftest.py  test_bundle_lint.py  test_deployed_artifacts.py  test_ecr_config.py  test_gatk_sv_images.py  test_iam_role.py  test_region_availability.py  test_run_cache.py  test_stage_reference.py  test_workflow_registration.py
python/tests/properties/: __init__.py  test_implementation_properties.py  test_property_01_template_roundtrip.py  test_property_02_missing_required.py  test_property_03_extra_input.py  test_property_04_no_floating_tags.py  test_property_05_registry_closure.py  test_property_06_preflight.py  test_property_07_iam_tightness.py  test_property_08_manifest_validation.py  test_property_09_melt_removal.py  test_property_10_cost_tag_coverage.py
python/tests/unit/: __init__.py  test_cli.py  test_cost.py  test_cost_analyzer.py  test_divergence.py  test_fuzzy_concordance.py  test_iam.py  test_packager.py  (+9 more)
(+219 files in other folders)
