[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatk-sv-aws"
version = "0.1.0"
description = "GATK-SV migration to AWS HealthOmics — packager, registrar, orchestrator, validation."
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "cleewh" },
]
keywords = [
    "gatk-sv",
    "structural-variants",
    "aws-healthomics",
    "wdl",
    "bioinformatics",
    "genomics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "boto3>=1.34,<2",
    "miniwdl>=1.12,<2",
    "jsonschema>=4.21,<5",
    "click>=8.1,<9",
    "aws-cdk-lib>=2.150.0",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "hypothesis>=6.100,<7",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
gatk-sv-aws = "gatk_sv_aws.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gatk_sv_aws"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
